# flighter

./: README.md
data-mining/: .gitignore  README.md  analysis.ipynb  ideas.md  main.ipynb  pyproject.toml  web-app-prep.ipynb
data-mining/pipeline/: __init__.py  cli.py  emit_sql.py  io.py  transform.py
data-mining/raw_data/: aircraft_data.json  planes.csv  ports-extended.csv
flighter/: README.md  jest.config.ts  package.json
flighter/.github/workflows/: ci.yml
flighter/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
flighter/app/booking/: error.tsx  loading.tsx  page.tsx
flighter/app/flights/: error.tsx  loading.tsx  page.tsx
flighter/components/: header.tsx  manage-booking-dialog.tsx
flighter/components/booking/: booking-wrapper.tsx  checkout-form.tsx  extras-selection.tsx  flight-summary-card.tsx  price-summary.tsx
flighter/components/flights/: flights-wrapper.tsx
flighter/components/forms/: flights-form.tsx
flighter/components/landing/: ai-banner.tsx  cheap-flights-section.tsx  destination-input.tsx  faq.tsx  flight-class-selector.tsx  landing-wrapper.tsx  passenger-selector.tsx  popular-flights-section.tsx  trip-type-selector.tsx
flighter/components/ui/: navigation-menu.tsx  select.tsx
flighter/hooks/: use-search-destinations-with-debounce.ts  use-search-destinations.ts
flighter/lib/: db.ts  pricing-calculator.ts
flighter/prisma/: schema.prisma
flighter/tests/: flight-class-selector.spec.tsx  landing-destination-input.spec.tsx  landing-wrapper.spec.tsx  passenger-selector.spec.tsx  trip-type-selector.spec.tsx
(+20 files in other folders)
